# Revit-Orchestrator

./: .gitignore
contracts/: error-codes.md  pipe-message.schema.json  pipe-protocol.md  tool-definition.schema.json  tool-schema.md
docs/: adding-tools.md  architecture.md  getting-started.md
src/mcp-server/: pyproject.toml
src/mcp-server/orchestrator/: __init__.py  config.py  server.py
src/mcp-server/orchestrator/adapters/: __init__.py  base.py  dynamo.py  pyrevit.py  revit_addin.py  workflow.py
src/mcp-server/orchestrator/dispatcher/: __init__.py  dispatcher.py  result.py
src/mcp-server/orchestrator/handlers/: dynamo_run_graph.py  flow_create_walls_from_lines.py  pyrevit_run_script.py  revit_create_wall.py  revit_get_element_info.py
src/mcp-server/orchestrator/llm/: __init__.py  base.py  claude_provider.py  openai_provider.py  router.py
src/mcp-server/orchestrator/pipe/: __init__.py  connection.py  pipe_server.py  protocol.py
src/mcp-server/orchestrator/registry/: __init__.py  loader.py  registry.py  schema_validator.py
src/mcp-server/orchestrator/tools/: dynamo.run_graph.json  flow.create_walls_from_lines.json  pyrevit.run_script.json  revit.create_wall.json  revit.get_element_info.json
src/revit-addin/: Directory.Build.props  RevitOrchestrator.sln
src/revit-addin/src/RevitOrchestrator/: App.cs  OrchestratorCommand.cs  RevitOrchestrator.csproj
src/revit-addin/src/RevitOrchestrator/Commands/: CreateWallCommand.cs  GetElementInfoCommand.cs
src/revit-addin/src/RevitOrchestrator/Execution/: CommandDispatcher.cs  CommandQueue.cs  IRevitCommand.cs  (+2 more)
(+13 files in other folders)
